[workspace]
members = [
    "crates/shared",
    "crates/realmd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-2.0"
repository = "https://github.com/cmangos/mangos-tbc"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "postgres", "sqlite", "macros"] }

# Cryptography
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
digest = "0.10"
rand = "0.8"
data-encoding = "2"

# Networking
bytes = { version = "1", features = ["serde"] }
byteorder = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "registry"] }
tracing-appender = "0.2"

# Configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
configparser = "3"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "2"
once_cell = "1"
parking_lot = "0.12"
chrono = "0.4"
signal-hook = "0.3"
ctrlc = "3"

# Shared crate
mangos-shared = { path = "crates/shared" }
