[package]
name = "extractors"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "extractors"
path = "src/main.rs"

[dependencies]
mangos-shared = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
byteorder = { workspace = true }
mpq = "0.8.1"
wow-adt = "0.6.1"
wow-wdt = "0.6.1"
rayon = "1.10"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
cc = { version = "1", optional = true }

[features]
default = []
recast = ["dep:cc"]
